--- a/Pinzar_Catalin_Lab2.csproj
+++ b/Pinzar_Catalin_Lab2.csproj
@@ -5,17 +5,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="GrpcCustomersService\**" />
     <Compile Remove="LibraryModel\**" />
     <Compile Remove="LibraryWebAPI\**" />
+    <Content Remove="GrpcCustomersService\**" />
     <Content Remove="LibraryModel\**" />
     <Content Remove="LibraryWebAPI\**" />
+    <EmbeddedResource Remove="GrpcCustomersService\**" />
     <EmbeddedResource Remove="LibraryModel\**" />
     <EmbeddedResource Remove="LibraryWebAPI\**" />
+    <None Remove="GrpcCustomersService\**" />
     <None Remove="LibraryModel\**" />
     <None Remove="LibraryWebAPI\**" />
   </ItemGroup>
 
+
+
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.14.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.34.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.34.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
@@ -30,6 +42,10 @@
 
   <ItemGroup>
     <ProjectReference Include="LibraryModel\LibraryModel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\customersCRUD.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
